# LtuPatternFactory

./: .gitignore  LtuPatternFactory.cabal  README.md  package.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
src/: AbstractFactory.hs  Adapter.hs  AspectPascal.hs  Aspects.hs  Aspects1.hs  Builder.hs  CMarkGFMRenderer.hs  Category.hs  CheapskateRenderer.hs  Coerce.hs  Combinators.hs  Command.hs  Composite.hs  CuttingStock.hs  DataTransferObject.hs  DependencyInjection.hs  Diff.hs  FluentApi.hs  HigherOrder.hs  IdiomBrackets.hs  Infinity.hs  Interpreter.hs  Iterator.hs  JsonPersistence.hs  Main.hs  MapReduce.hs  MiniPascal.hs  NullObject.hs  Objects.hs  Pipeline.hs  Proxy.hs  Reflection.hs  SimplePersistence.hs  Singleton.hs  Strategy.hs  TemplateMethod.hs  Visitor.hs
