name:                LtuPatternFactory
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thma/LtuPatternFactory#readme
license:             APACHE2
license-file:        LICENSE
author:              Thomas Mahler
maintainer:          thma@apache.org
copyright:           2018 Thomas Mahler
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable LtuPatternFactory
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
